--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <h1>Weather Dashboard</h1>
     </header>
-    <main>
-        <div>
-            <h2> Search for a City</h2>
+    <main class="container">
+        <div class="row">
+            <div class="col-4">
+                <div class="form-group d-grid border-bottom border-5 border-primary">
+                    <h2 class=""> Search for a City</h2>
+                    <textarea class="form-control input-lg"></textarea>
+                    <button class="btn btn-primary btn-lg mt-3 mb-3">Search</button>
+                </div>
+            </div>
+            <div class="col-8">
+                <p>Place holder</p>
+            </div>
         </div>
     </main>
 </body>
+<script href="./assets/script.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </html>
