--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 bg-info">
                 <div class="form-group d-grid border-bottom border-5 border-primary">
                     <h2 class=""> Search for a City</h2>
-                    <textarea class="form-control input-lg"></textarea>
-                    <button class="btn btn-primary btn-lg mt-3 mb-3">Search</button>
+                    <textarea id="userInput" class="userInput form-control input-lg"></textarea>
+                    <button id="searchBtn" class="btn btn-primary btn-lg mt-3 mb-3">Search</button>
                 </div>
             </div>
-            <div class="col-8">
-                <p>Place holder</p>
+            <div class="weather bg-primary col-8">
+                <div class="city-name"></div>
+                <div class="five-day">
+                </div>
+                <!-- <p>Place holder</p> -->
             </div>
+
         </div>
     </main>
 </body>
-<script href="./assets/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="./assets/script.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
